Increased z-index to fix dokku bug that wasn't apparent when I tested locally.

--- a/h/css/inject.scss
+++ b/h/css/inject.scss
@@ -355,7 +355,7 @@ $baseFontSize: 14px;
   left: -($heatmap-width + 17px - 7px);
   top: 2.5em;
   width: 2.5em;
-  z-index: 0;
+  z-index: 1;
 
   &.stickybuttons2 {
     height: 70px;
